# typical-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SCRIPTS.md  debug.sh  run_tests.sh
examples/: CMakeLists.txt  README.md
examples/01/: CMakeLists.txt  main.cpp
include/modules/: typical.ixx
include/modules/typical/: calculus.ixx  church.ixx  eq.ixx  lambda.ixx  nat.ixx  refine.ixx  set.ixx
tests/: BUG_FIXES.md  CMakeLists.txt  EXAMPLES.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  church_tests.cpp  lambda_advanced_tests.cpp  lambda_tests.cpp  nat_tests.cpp
